force-app/main/default/objects/Drug_Usage__c/Drug_Usage__c.object-meta.xml
<CustomObject>

    <label>Drug Usage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Drug Usage Name</label>

        <type>Text</type>
    </nameField>
    <pluralLabel>Drug Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>