force-app/main/default/objects/Drug_Usage__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <label>Clinical Trial Profile</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>Drug Usage</relationshipLabel>
    <relationshipName>Drug_Usage</relationshipName>
    <relationshipOrder>0</relationshipOrder>

    <type>MasterDetail</type>
</CustomField>