force-app/main/default/objects/Drug_Usage__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>First Patient In to Last Patient Out</inlineHelpText>
    <label>Duration</label>

    <type>TextArea</type>
</CustomField>